unpackaged/main/default/objects/CMPL123TMS__Library__c/CMPL123TMS__Library__c.object-meta.xml
<CustomObject>
    <description>Documents and Courses</description>
    <label>Library Item</label>
    <nameField>
        <displayFormat>LIB-{0000}</displayFormat>
        <label>Library ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Library Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>