unpackaged/main/default/objects/CMPL123TMS__Library__c/fields/CMPL123_WF_Status__c.field-meta.xml
<CustomField>
        <fullName>CMPL123_WF_Status__c</fullName>
        <label>Workflow Status</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>