unpackaged/main/default/objects/CMPL123TMS__Library__c/fields/CMPL123TMS__Content_Type__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Content_Type__c</fullName>
        <label>Content Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Operating Procedure</fullName>
                </value>
                <value>
                    <fullName>Work Instruction</fullName>
                </value>
                <value>
                    <fullName>Policy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>