unpackaged/main/default/objects/CMPL123TMS__Library__c/fields/CMPL123TMS__Days_for_Completion__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Days_for_Completion__c</fullName>
        <label>Days for Completion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>