unpackaged/main/default/objects/CMPL123TMS__Library__c/fields/CMPL123TMS__Delivery_Medium__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Delivery_Medium__c</fullName>
        <label>Delivery Medium</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Instructor Led</fullName>
                </value>
                <value>
                    <fullName>Virtual Classroom</fullName>
                </value>
                <value>
                    <fullName>Self Paced On-line</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>