unpackaged/main/default/objects/CMPL123TMS__Library__c/fields/CMPL123TMS__Description__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>