unpackaged/main/default/objects/CMPL123TMS__Library__c/fields/CMPL123TMS__DMS_Doc_Id__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__DMS_Doc_Id__c</fullName>
        <description>DMS Doc Id</description>
        <externalId>true</externalId>
        <inlineHelpText>DMS Doc Id</inlineHelpText>
        <label>DMS Doc Id</label>
        <length>20</length>
        <type>Text</type>
    </CustomField>