unpackaged/main/default/objects/CMPL123TMS__Library__c/fields/CMPL123TMS__Document_Status__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Document_Status__c</fullName>
        <description>Workflow status populated to document status</description>
        <inlineHelpText>Workflow Status</inlineHelpText>
        <label>Library Item Status</label>
        <length>30</length>
        <type>Text</type>
    </CustomField>