unpackaged/main/default/objects/CMPL123TMS__Library__c/fields/CMPL123TMS__Duration__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Duration__c</fullName>
        <label>Duration</label>
        <length>40</length>
        <type>Text</type>
    </CustomField>