unpackaged/main/default/objects/CMPL123TMS__Library__c/fields/CMPL123TMS__Effective_Date__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </CustomField>