unpackaged/main/default/objects/CMPL123TMS__Library__c/fields/CMPL123TMS__Latest_Contentversion_Id__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Latest_Contentversion_Id__c</fullName>
        <description>Latest Contentversion Id</description>
        <inlineHelpText>Latest Contentversion Id</inlineHelpText>
        <label>Latest Content Version Id</label>
        <length>30</length>
        <type>Text</type>
    </CustomField>