unpackaged/main/default/objects/CMPL123TMS__Library__c/fields/CMPL123TMS__Old_Revision_Library_Id__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Old_Revision_Library_Id__c</fullName>
        <description>Old Revision Library Id</description>
        <inlineHelpText>Old Revision Library Id</inlineHelpText>
        <label>Old Revision Library Id</label>
        <length>30</length>
        <type>Text</type>
    </CustomField>