unpackaged/main/default/objects/CMPL123TMS__Library__c/fields/CMPL123TMS__Related_TMS_Quizzes__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Related_TMS_Quizzes__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related TMS Quizzes</label>
        <referenceTo>CMPL123TMS__TMS_Quizzes__c</referenceTo>
        <relationshipName>Library_Items</relationshipName>
        <type>Lookup</type>
    </CustomField>