unpackaged/main/default/objects/CMPL123TMS__Library__c/fields/CMPL123TMS__Related_Training__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Related_Training__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Training</label>
        <referenceTo>CMPL123TMS__Library__c</referenceTo>
        <relationshipName>Libraries</relationshipName>
        <type>Lookup</type>
    </CustomField>