unpackaged/main/default/objects/CMPL123TMS__Library__c/fields/CMPL123TMS__Reoccurrence_Interval_in_Months__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Reoccurrence_Interval_in_Months__c</fullName>
        <description>Reoccurrence Interval in Months</description>
        <inlineHelpText>Reoccurrence Interval in Months</inlineHelpText>
        <label>Reoccurrence Interval in Months</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>