unpackaged/main/default/objects/CMPL123TMS__Library__c/fields/CMPL123TMS__Reoccurring__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Reoccurring__c</fullName>
        <label>Reoccurring</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Bi-Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Bi-Yearly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>