unpackaged/main/default/objects/CMPL123TMS__Library__c/fields/CMPL123TMS__Revision__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Revision__c</fullName>
        <label>Revision</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>