unpackaged/main/default/objects/CMPL123TMS__Library__c/fields/CMPL123TMS__Scheduled_Date_Time__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Scheduled_Date_Time__c</fullName>
        <label>Scheduled Date/Time</label>
        <type>DateTime</type>
    </CustomField>