unpackaged/main/default/objects/CMPL123TMS__Library__c/fields/CMPL123TMS__Status__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Effective</fullName>
                </value>
                <value>
                    <fullName>Obsolete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>