unpackaged/main/default/objects/CMPL123TMS__Library__c/fields/CMPL123TMS__Training_Impact__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Training_Impact__c</fullName>
        <description>Training Impact</description>
        <inlineHelpText>Training Impact</inlineHelpText>
        <label>Training Impact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Required Training</fullName>
                </value>
                <value>
                    <fullName>No Impact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>