unpackaged/main/default/objects/CMPL123TMS__Library__c/fields/CMPL123TMS__Training_Level__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Training_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Training Level</description>
        <inlineHelpText>Training Level</inlineHelpText>
        <label>Training Level</label>
        <referenceTo>CMPL123TMS__Training_Level__c</referenceTo>
        <relationshipLabel>Library Items</relationshipLabel>
        <relationshipName>Library_Items</relationshipName>
        <type>Lookup</type>
    </CustomField>