unpackaged/main/default/objects/CMPL123TMS__Library__c/fields/CMPL123TMS__Training_Name__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Training_Name__c</fullName>
        <label>Training Name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>