unpackaged/main/default/objects/CMPL123TMS__Library__c/fields/CMPL123TMS__Training_Type__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Training_Type__c</fullName>
        <label>Training Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Course</fullName>
                </value>
                <value>
                    <fullName>Document</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>