unpackaged/main/default/objects/CMPL123TMS__Library__c/listViews/CMPL123TMS__All.listView-meta.xml
<ListView>
        <fullName>CMPL123TMS__All</fullName>
        <columns>NAME</columns>
        <columns>CMPL123TMS__Training_Name__c</columns>
        <columns>CMPL123TMS__Training_Number__c</columns>
        <columns>CMPL123TMS__Latest_Contentversion_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>